day3/bgg/app-deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: bgg-app-deployment-v1
  namespace: bgg

spec:
  replicas: 2
  
  selector:
    matchLabels:
      app.kubernetes.io/name: bgg-app-pod
      app.kubernetes.io/version: "v1"
  
  template:
    metadata:
      name: bgg-app-pod-v1
      labels:
        app.kubernetes.io/name: bgg-app-pod
        app.kubernetes.io/version: "v1"
    
    spec:
      containers:
      - name: bgg-app-v1
        image: stackupiss/bgg-app:v1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
        ports: 
        - name: bgg-app-port-v1
          containerPort: 3000
