day3/bgg/app-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: bgg-app-deployment-v2
  namespace: bgg

spec:
  replicas: 2
  
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  
  selector:
    matchLabels:
      app.kubernetes.io/name: bgg-app-pod
      app.kubernetes.io/version: "v2"
  
  template:
    metadata:
      name: bgg-app-pod-v2
      labels:
        app.kubernetes.io/name: bgg-app-pod
        app.kubernetes.io/version: "v2"
    
    spec:
      containers:
      - name: bgg-app-v2
        image: stackupiss/bgg-app:v2
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
        ports: 
        - name: bgg-app-port-v2
          containerPort: 3000
