day3/bgg/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: bgg-db-deployment
  namespace: bgg

spec:
  replicas: 1
  
  selector:
    matchLabels:
      app.kubernetes.io/name: bgg-db-pod
  
  template:
    metadata:
      name: bgg-db-pod
      labels:
        app.kubernetes.io/name: bgg-db-pod
        app.kubernetes.io/version: "v1"
    
    spec:
      volumes:
        - name: bgg-db-volume
          persistentVolumeClaim:
            claimName: bgg-db-pvc
      containers:
      - name: bgg-db
        image: stackupiss/bgg-db:v1
        imagePullPolicy: Always
        ports: 
        - name: bgg-db-port
          containerPort: 3306
        volumeMounts:
          - mountPath: /var/lib/mysql
            name: bgg-db-volume
