day3/bgg/app-service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: bgg-app-service-v1
  namespace: bgg
  labels:
    name: bgg-app-service
    version: v1
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bgg-app-pod
    app.kubernetes.io/version: "v1"
  ports:
  - name: bgg-app-service-port-v1
    port: 80
    targetPort: bgg-app-port-v1
