day3/bgg/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: bgg-app-ingress
  namespace: bgg
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  backend:
    serviceName: bgg-app-service-v2
    servicePort: 80
  rules:
  - http:
      paths:
      - path: /v2
        backend:
          serviceName: bgg-app-service-v2
          servicePort: 80
      - path: /v1
        backend:
          serviceName: bgg-app-service-v1
          servicePort: 80
      - path: /
        backend:
          serviceName: bgg-app-service-v2
          servicePort: 80
